[gd_scene load_steps=7 format=3 uid="uid://dqdxuekopix2f"]

[ext_resource type="Texture2D" uid="uid://ua2jw7rbltq5" path="res://assets/PNG/Green/Default/button_square_depth_flat.png" id="1_anlgx"]
[ext_resource type="Texture2D" uid="uid://ce88qpbtl3w7s" path="res://assets/PNG/Red/Default/button_square_depth_flat.png" id="2_ahf3n"]
[ext_resource type="Texture2D" uid="uid://dq1fppeddw3e" path="res://assets/PNG/Blue/Default/button_square_depth_flat.png" id="3_fr30s"]
[ext_resource type="Texture2D" uid="uid://cwn3pfggal8x3" path="res://assets/PNG/Grey/Default/button_square_depth_flat.png" id="4_3j8g7"]
[ext_resource type="Script" path="res://scenes/button.gd" id="5_j78dw"]
[ext_resource type="LabelSettings" uid="uid://b0155sqcrgsvu" path="res://scenes/Future16White.tres" id="6_vrnpo"]

[node name="Button" type="TextureButton"]
custom_minimum_size = Vector2(-1.11, 0)
offset_left = 1.0
offset_top = 1.0
offset_right = 65.0
offset_bottom = 65.0
scale = Vector2(1.3, 1.3)
pivot_offset = Vector2(32, 32)
texture_normal = ExtResource("1_anlgx")
texture_pressed = ExtResource("2_ahf3n")
texture_hover = ExtResource("3_fr30s")
texture_disabled = ExtResource("4_3j8g7")
script = ExtResource("5_j78dw")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -11.5
offset_right = 16.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "AAA"
label_settings = ExtResource("6_vrnpo")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "score
"
label_settings = ExtResource("6_vrnpo")
horizontal_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
